# rosebot

v2mini_description/: model.conf  model.config  model.sdf  model.sdf.save
v2mini_description/gzweb/: gzweb_v2mini.sdf  gzweb_v2mini.urdf
v2mini_description/meshes/arm/: arm_link1.dae  arm_link1.stl  arm_link2.dae  arm_link2.stl  arm_link3.dae  arm_link3.stl  arm_link4.dae  arm_link4.stl  arm_link5.dae  arm_link5.stl  arm_link6.dae  (+1 more)
v2mini_description/urdf/: .v2mini_head.urdf.xacro.swp  v2mini.sdf.save  v2mini.urdf  v2mini_arm.urdf.xacro  v2mini_arm.urdf.xacro.save  v2mini_body.urdf.xacro  v2mini_head.urdf.xacro  v2mini_robot.urdf.xacro  v2mini_robot.urdf.xacro.bak
v2mini_gazebo/config/: .sim_joint_states.yaml.swp  frames.gv  v2mini_arm_controller.yaml  v2mini_head_controller.yaml  v2mini_sim_base_controller.yaml  v2mini_sim_joint_states.yaml  v2mini_sim_localization.yaml  v2mini_torso_controller.yaml
v2mini_gazebo/launch/: description.launch  v2mini_empty_world.launch
v2mini_gazebo/urdf/: frames.gv  v2mini.sdf  v2mini.urdf  v2mini_robot.gazebo.xacro  v2mini_robot.gazebo.xacro.save
v2mini_init/: CMakeLists.txt  v2mini.machine
v2mini_init/firmware/: torsoware.cpp
v2mini_moveit_config/: package.xml
v2mini_moveit_config/config/: controllers.yaml  kinematics.yaml.save  stomp_config.yaml  v2mini.srdf
v2mini_moveit_config/launch/: move_group.launch  moveit_planning_execution.launch  planning_context.launch  stomp_moveit_planning_pipeline.launch.xml  v2mini_moveit_controller_manager.launch.xml
v2mini_teleop/: CMakeLists.txt  CMakeLists.txt.save  package.xml
(+9 files in other folders)
